FE: Fix User light dark mode issues

--- a/packages/client/faraday-client/src/components/RSB/Views/albumView/components/FilterSection.module.css
+++ b/packages/client/faraday-client/src/components/RSB/Views/albumView/components/FilterSection.module.css
@@ -6,6 +6,8 @@
 
 .availabilitySelect {
   padding: var(--p-2) var(--p-3);
+  background: var(--bg-dark-2);
+  color: var(--white);
 }
 .availabilitySelect option {
   padding: var(--p-2) var(--p-3);
